revert back to mutable collection list